# What-s-News

./: .gitignore  LICENSE  README.md  config.toml  main.py  pyproject.toml
.cursor/plans/: trend_news_summaries_cd5a9f7a.plan.md
.github/workflows/: whatsup.yml
outputs/: trend_news_summary_20260716-113326.csv  trend_news_summary_20260716-114351.csv  trend_news_summary_20260716-114713.csv  trend_news_summary_20260716-120939.csv  trend_news_summary_20260716-121440.csv  trend_news_summary_20260716-133137.csv  trend_news_summary_20260716-145116.csv  trend_news_summary_20260716-163125.csv
prompts/: news-summary.txt
tests/: test_main.py  test_news.py  test_pipeline.py  test_summarizer.py  test_telegram.py  test_trends.py
whatsup/: __init__.py  config.py  news.py  pipeline.py  summarizer.py  telegram.py  trends.py
