[project]
name = "whatsup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "trafilatura>=2.1.0",
    "trendspyg>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
